@@ -3,7 +3,7 @@
 <head>
   <title>Document properties</title>
 
-<script type="text/javascript" src="../../../popups/popup.js"></script>
+<script type="text/javascript" src="popups/popup.js"></script>
 
 <script type="text/javascript">
 
